-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6, 6.7
-
None
-
Ubuntu 22.04 LTS, tested with Qt 6.6.1 and 6.7 branches
-
0115dc588 (dev), d7a5e9d15 (6.8)
Configuration commands:
cmake -DCMAKE_C_COMPILER=clang-17 -DCMAKE_CXX_COMPILER=clang++-17 -DCMAKE_BUILD_TYPE=RelWithDebInfo -DQT_BUILD_TESTS=OFF -DQT_BUILD_EXAMPLES=OFF -DQT_BUILD_SUBMODULES=qtbase;qtdeclarative;qtshadertools;qtsvg;qt5compat -DFEATURE_sanitize_undefined=ON
Compilation error:
FAILED: qtbase/libexec/qmlcachegen : && /usr/bin/clang++-17 -fsanitize=undefined -fsanitize=float-divide-by-zero -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -DNDEBUG -O2 -Wl,--enable-new-dtags -fPIE -pie qtdeclarative/src/qmlcachegen/CMakeFiles/qmlcachegen.dir/qmlcachegen_autogen/mocs_compilation.cpp.o qtdeclarative/src/qmlcachegen/CMakeFiles/qmlcachegen.dir/qmlcachegen.cpp.o -o qtbase/libexec/qmlcachegen -Wl,-rpath,/home/user/Documents/Dev/QtLocal/build_usan/qtbase/lib: qtbase/lib/libQt6QmlCompiler.so.6.7.0 qtbase/lib/libQt6Qml.so.6.7.0 qtbase/lib/libQt6QmlBuiltins.a qtbase/lib/libQt6Network.so.6.7.0 qtbase/lib/libQt6Core.so.6.7.0 && : /usr/bin/ld: qtbase/lib/libQt6Qml.so.6.7.0: undefined reference to `typeinfo for QThreadPrivate' clang++-17: error: linker command failed with exit code 1 (use -v to see invocation) [3/1332] Linking CXX shared module qtbase/plugins/qmltooling/libqmldbg_debugger.so ninja: build stopped: subcommand failed.
| For Gerrit Dashboard: QTBUG-120216 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 536203,2 | Simplify QQmlThread::isThisThread() | dev | qt/qtdeclarative | Status: ABANDONED | +1 | 0 |
| 536207,2 | Add a fast way to check if a thread is current | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 536290,2 | Fix QQmlThread::isThisThread() in ubsan | dev | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
| 570234,4 | Use new UBSAN compatible QThread::isCurrentThread | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 570616,2 | Use new UBSAN compatible QThread::isCurrentThread | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |