Use new UBSAN compatible QThread::isCurrentThread

Using the private QThreadData caused ubsan linking issues.

Pick-to: 6.8
Fixes: QTBUG-120216
Change-Id: Ia6ae2e9d134a487220f9e0dca966e358c21c9833
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>